--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
+    "@signumjs/core": "^1.0.0-rc.17",
+    "@signumjs/http": "^1.0.0-rc.17",
+    "@signumjs/util": "^1.0.0-rc.17",
     "localforage": "^1.10.0",
     "next": "^12.1.0",
     "next-pwa": "^5.4.6",
