--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@signumjs/core": "^1.0.0-rc.17",
     "@signumjs/http": "^1.0.0-rc.17",
@@ -37,13 +38,16 @@
     "@types/jest": "^27.0.2",
     "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.42",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
+    "postcss": "^8.4.12",
     "prettier": "2.6.0",
+    "tailwindcss": "^3.0.23",
     "ts-jest": "^27.1.3",
     "typescript": "4.6.2"
   },
