chore: updated all deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@/app/*": ["app/*"],
       "@/features/*": ["features/*"],
       "@/states/*": ["states/*"],
-      "@/styles/*": ["styles/*"]
+      "@/styles/*": ["styles/*"],
+      "@/types/*": ["types/*"]
     },
     "incremental": true
   },
